# pci-ids.rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  pciids-updater.yml  release.yml
src/: lib.rs  pci.ids
