[package]
name = "pci-ids"
description = "Rust wrappers for the PCI ID Repository"
license = "MIT"
version = "0.2.4"
authors = ["William Woodruff <william@yossarian.net>", "Charles Lien <lienching31240@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/lienching/pci-ids.rs"
repository = "https://github.com/lienching/pci-ids.rs"
keywords = ["pci"]
categories = ["hardware-support"]

[build-dependencies]
nom = { version = "7.1", default-features = false }
phf_codegen = "0.11"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies]
phf = { version = "0.11", default-features = false }

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"
exactly = 2

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-header@ -->"
replace = "<!-- @next-header@ -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- @next-url@ -->"
replace = "<!-- @next-url@ -->\n[Unreleased]: https://github.com/woodruffw/kbs2/compare/{{tag_name}}...HEAD"
exactly = 1
